force-app/main/default/objects/COA_Transaction__c/COA_Transaction__c.object-meta.xml
<CustomObject>
    <label>COA Transaction</label>
    <nameField>
        <displayFormat>COAT-{00000000}</displayFormat>
        <label>COA Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>COA Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>