force-app/main/default/objects/COA_Transaction__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>COA Transactions</relationshipLabel>
    <relationshipName>COA_Transactions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>