force-app/main/default/objects/COA_Transaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Transaction_Date__c</columns>
    <columns>Transaction_Notes__c</columns>
    <columns>Reconciled__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>